--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,14 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body{
+  background-image: url('./assets/BackGround.webp');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+}
  
 
 @font-face {
@@ -10,11 +18,25 @@
   src: url("./assets/Yugi.ttf") format("truetype");
 }
 
+@font-face {
+  font-family: "Ferrum"; 
+  src: url("./assets/ferrum.otf") format("truetype");
+}
+
+.GameContainer{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
 .TopContainer{
   display: flex;
   justify-content: space-around;
   align-items: center;
+  background-color: rgba(12, 4, 4, 0.589);
 }
+
+
 
 .TopContainer h1{
     color: rgba(0, 0, 0, 0.747);
@@ -24,13 +46,56 @@
 
 .ImageContainer{
   width: 100%;
-  max-width: 10%;   /* make media queries for the rest later on*/
+  max-width: 10%;   
+}
+
+@media(max-width: 1135px){
+  .ImageContainer   {
+    width: 100%;
+    max-width: 20%;    
+ 
+  }
 }
 
 .ImageContainer img{
   width: 100%;
   height: auto;
+  margin-left: 10px
 }
+
+.LeftSide{
+  display: flex;
+  flex-direction: column;
+}
+
+.LeftSide h2{
+  font-family: "Ferrum";
+  color: rgba(219, 204, 204, 0.836);
+  text-shadow: 4px 4px 2px rgba(0,0,0,0.6);
+
+}
+
+.RightSide{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.RightSide h2{
+  font-family: "Ferrum";
+  color: rgba(255, 255, 255, 0.685);
+  text-shadow: 4px 4px 2px rgba(0,0,0,0.6);
+}
+
+@media(max-width: 1544px){
+  .RightSide h2   {
+      margin-left: -150px;
+  }
+}
+ 
+ 
+ 
 
 .MiddleContainer{
   display: flex;
@@ -38,7 +103,6 @@
 }
 
 .CardsContainer{
- 
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -73,6 +137,37 @@
 .LoadingContainer h1{
     color: rgba(0, 0, 0, 0.747);
     font-family: "YuGi";
+}
+
+.FooterContainer{
+  background-color: rgba(12, 4, 4, 0.829);
+  display: flex;
+  justify-content: center;
+  padding: 40PX;
+  color: rgb(0, 0, 0);
+}
+
+.FooterContainer h2{
+  font-family: "Ferrum";
+}
+
+.FooterContainer a{
+  color: rgba(255, 255, 255, 0.651);
+}
+
+.FooterContainer a:hover{
+  color: rgba(255, 0, 0, 0.719);
+}
+
+.rule{
+  font-family: "Ferrum";
+  color: rgb(248, 248, 248);
   
 }
+
+
+.bScore{
+ margin-left: -40px;
+}
+ 
  
