--- a/src/index.css
+++ b/src/index.css
@@ -23,204 +23,6 @@ body{
   src: url("./assets/ferrum.otf") format("truetype");
 }
 
-@media(max-width: 1280px) { /* for 720p*/
-    .RightSide{
-      width: 20%;
-      font-size: 1.5rem;
-    }
-    .ImageContainer{
-      width: 100%;
-      min-width: 20%;
-    }
-    .LeftSide{
-      font-size: 1.4rem;
-    }
-    .rule{
-      font-size: 2.5rem;
-      margin-bottom: 20px;
-    }
-}
-
-@media(min-width: 2560px){
-  .TopContainer{
-    font-size: 2.5rem;
-  }
-
-  .RightSide h2{
-
-    font-size: 3rem;
-  }
-
-  .ImageContainer{
-    width: 100%;
-    min-width: 40%;
-  }
-
-  .rule{
-    font-size: 3.4rem;
-  }
-
-  .Card{
-    min-width: 400px;
-    min-height: 500px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .RightSide{
-    width: 10%;
-    font-size: 1rem;
-  }
-
-  .ImageContainer{
-    width: 100%;
-    min-width: 15%;
-  }
-}
-
-@media (max-width: 1310px) {
-  .RightSide{
-    width: 25%;
-    font-size: 1.4rem;
-  }
-
-  .ImageContainer{
-    width: 100%;
-    min-width: 25%;
-  }
-}
-
-
-
-@media (max-width: 1310px) {
-  .RightSide{
-    width: 20%;
-    font-size: 1.2rem;
-  }
-
-  .ImageContainer{
-    width: 100%;
-    min-width: 20%;
-  }
-
-  .LeftSide h2{
-    font-size: 1.4rem;
-    margin-left: 15px;
-  }
-}
-
-@media (max-width: 1018px) {
-  .RightSide{
-    width: 25%;
-    font-size: 1.2rem;
-  }
-
-  .ImageContainer{
-    width: 100%;
-    min-width: 25%;
-  }
-
-  .LeftSide h2{
-    font-size: 1.4rem;
-    margin-left: 20px;
-  }
-}
-
-@media (max-width: 1018px) {
-  .RightSide{
-    width: 25%;
-    font-size: 1.2rem;
-  }
-
-  .ImageContainer{
-    width: 100%;
-    min-width: 25%;
-  }
-
-  .LeftSide h2{
-    font-size: 1.4rem;
-    margin-left: 20px;
-  }
-}
-
-@media (max-width: 910px) {
-  .RightSide{
-    width: 35%;
-    font-size: 1.2rem;
-  }
-
-  .ImageContainer{
-    width: 100%;
-    min-width: 27%;
-  }
-
-  .LeftSide h2{
-    font-size: 1.4rem;
-    margin-left: 10px;
-  }
-}
-
-@media (max-width: 773px) {
-  .RightSide{
-    width: 70%;
-    font-size: 1.2rem;
-  }
-
-  .ImageContainer{
-    width: 100%;
-    min-width: 40%;
-  }
-
-  .LeftSide h2{
-    font-size: 1.4rem;
-    margin-left: 10px;
-  }
-}
-@media (max-width: 563px) {
-  .RightSide{
-    width: 100%;
-    font-size: 1.2rem;
-  }
-
-  .ImageContainer{
-    width: 100%;
-    min-width: 50%;
-  }
-
-  .LeftSide h2{
-    font-size: 1.4rem;
-    margin-left: 10px;
-  }
-}
-
-@media (max-width: 492px) {
-  .RightSide{
-    width: 100%;
-    font-size: 0.75rem;
-  }
-
-  .ImageContainer{
-    width: 100%;
-    min-width: 50%;
-  }
-
-  .LeftSide h2{
-    margin-left: 10px;
-    font-size: 0.9rem;
-  }
-
-  .rule{
-    font-size: 1.9rem;
-  }
-}
-
-
-
-
-
-
-
-
 .GameContainer{
   display: flex;
   flex-direction: column;
@@ -229,61 +31,24 @@ body{
 
 .TopContainer{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   background-color: rgba(12, 4, 4, 0.589);
-}
-
-
-
-.TopContainer h1{
-    color: rgba(0, 0, 0, 0.747);
-    font-family: "YuGi";
-}
-
-
-.ImageContainer{
-  width: 100%;
-  max-width: 10%;   
-}
- 
-
-.ImageContainer img{
-  width: 100%;
-  height: auto;
-  margin-left: 10px
-}
-
-.LeftSide{
-  display: flex;
-  flex-direction: column;
-  padding-left: 40px;
-}
-
-.LeftSide h2{
-  font-family: "Ferrum";
-  color: rgba(219, 204, 204, 0.836);
   text-shadow: 4px 4px 2px rgba(0,0,0,0.6);
-
+  color: rgba(255, 255, 255, 0.685);
+  font-family: "Ferrum";
 }
 
-.RightSide{
+.TopContainer img{
+  width: 150px;
+}
+
+.MiddleTop{
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex-wrap: wrap;
-  padding-right: 40px;
-}
-
-
-.bScore{
-  margin-left: -40px;
-}
-
-.RightSide h2{
-  font-family: "Ferrum";
-  color: rgba(255, 255, 255, 0.685);
-  text-shadow: 4px 4px 2px rgba(0,0,0,0.6);
+  padding-left: 40px;
+  font-size: 1.5rem;
 }
 
 .MiddleContainer{
@@ -298,12 +63,26 @@ body{
   gap: 10px;
   height: 90vh;
   align-items: center;
-
 }
 
 .Card{
   width: 240px;
   height: 360px;
+}
+
+@media(min-width:2560px){
+  .Card{
+    width:  400px;
+    height: 600px;
+  }
+
+  .TopContainer img{
+    width: 250px;
+  }
+
+  .rule{
+    margin-bottom: 40px;
+  }
 }
 
 
@@ -315,6 +94,7 @@ body{
 .Card img{
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .LoadingContainer{
@@ -337,15 +117,6 @@ body{
 .LoadingContainer img{
   width: 90px;
 }
-
-.FooterContainer{
-  background-color: rgba(12, 4, 4, 0.829);
-  display: flex;
-  justify-content: center;
-  padding: 40PX;
-  color: rgb(0, 0, 0);
-}
-
 
 .rule{
   font-family: "Ferrum";
